[gd_scene load_steps=3 format=3 uid="uid://c5gtnnholnfgg"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1_wirfx"]
[ext_resource type="PackedScene" uid="uid://cauos3dtqx7ah" path="res://scenes/player.tscn" id="2_i74kj"]

[node name="Lobby" type="Node"]
script = ExtResource("1_wirfx")
player_scene = ExtResource("2_i74kj")

[node name="LobbyMenu" type="CanvasLayer" parent="."]

[node name="Host" type="Button" parent="LobbyMenu"]
offset_left = 6.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 36.0
text = "Host"

[node name="Join" type="Button" parent="LobbyMenu"]
offset_left = 10.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 71.0
text = "Join"

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scenes/player.tscn")
spawn_path = NodePath("../PlayerSpawnRoot")

[node name="PlayerSpawnRoot" type="Node" parent="."]

[connection signal="pressed" from="LobbyMenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="LobbyMenu/Join" to="." method="_on_join_pressed"]
